# UtiltyFramework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json.mingw  CMakeSettings.json.ninja  CMakeSettings.json.vs2017  CMakeSettings.json.vs2019  README.md  azure-pipelines.yml  conanfile_linux.txt  conanfile_windows.txt
Modules/: CMakeLists.txt
Modules/accessories/: CMakeLists.txt
Modules/accessories/controllers/: CMakeLists.txt
Modules/communication/: CMakeLists.txt
Modules/communication/ports/: CMakeLists.txt  can_port_impl.cpp  can_port_impl.h  helpers.hpp  serial_port_impl.cpp  serial_port_impl.h  tcp_client_port_impl.cpp  tcp_client_port_impl.h  tcp_server_port_impl.cpp  tcp_server_port_impl.h  udp_client_port_impl.cpp  udp_client_port_impl.h
Modules/communication/protocols/: CMakeLists.txt  delimiter_protocol_impl.cpp  delimiter_protocol_impl.h  fixed_length_protocol_impl.cpp  fixed_length_protocol_impl.h  udp_datagram_protocol.cpp  udp_datagram_protocol.h  variable_length_protocol_impl.cpp  variable_length_protocol_impl.h
Modules/compression/: CMakeLists.txt
Modules/compression/lz4/: CMakeLists.txt  lz4_compression.cpp  lz4_compression.h
Modules/core/: CMakeLists.txt
Modules/core/ezframework/: CMakeLists.txt  application.cpp  ezframework.cpp  guid.cpp
Modules/database/: CMakeLists.txt
Modules/database/memory_database/: CMakeLists.txt  row.cpp  row.h  set.cpp  set.h  table.cpp  table.h
Modules/dispatchers/: CMakeLists.txt
Modules/dispatchers/inprocess_dispatcher/: CMakeLists.txt  inprocess_dispatcher.cpp  inprocess_dispatcher.h
Modules/files/: CMakeLists.txt
Modules/files/common_files/: CMakeLists.txt  bin_file_impl.cpp  bin_file_impl.h  files_handler_impl.cpp  files_handler_impl.h  filessystem.cpp  ini_file_impl.cpp  ini_file_impl.h  log_file_impl.cpp  log_file_impl.h  xml_file_impl.cpp  xml_file_impl.h
Modules/http/: CMakeLists.txt
Modules/http/curl_http_client/: CMakeLists.txt  curl_http_client.cpp  curl_http_client.h
Modules/imaging/: CMakeLists.txt
Modules/imaging/image_converter/: CMakeLists.txt  image_converter.cpp  image_converter.h
Modules/imaging/image_undistort/: CMakeLists.txt  image_undistort.cpp  image_undistort.h
Modules/logging/: CMakeLists.txt
Modules/logging/boost_logger/: CMakeLists.txt  logger.cpp  logger.h
Modules/parsers/: CMakeLists.txt
Modules/parsers/binary_parser/: CMakeLists.txt  binary_metadata_impl.cpp  binary_metadata_store_impl.cpp  binary_metadata_store_impl.h  binary_parser_impl.cpp  binary_parser_impl.h  enum_data_imp.cpp  enum_data_imp.h
Modules/parsers/nlohmann/: fifo_json.hpp  json.hpp
Modules/rules/: CMakeLists.txt  expression.cpp  expression.h  node.cpp  node.h  operands.cpp  operands.h  operators.cpp  operators.h  rule.cpp  rule.h  rules_concrete_generic.cpp  rules_concrete_generic.h  rules_defs.h  rules_dispatcher_impl.cpp  rules_dispatcher_impl.h  rules_parser.cpp  rules_parser.h
Modules/streams/: CMakeLists.txt
Modules/streams/file_stream/: CMakeLists.txt  file_stream.cpp  file_stream.h
Modules/streams/memory_stream/: CMakeLists.txt  memory_stream.cpp  memory_stream.h
Modules/video/: CMakeLists.txt
Modules/video/gstreamer_elements/: CMakeLists.txt
Modules/video/gstreamer_meta/: CMakeLists.txt
Modules/video/gstreamer_video/: CMakeLists.txt  gstreamer_auto_source.cpp  gstreamer_auto_source.h  gstreamer_custom_source.cpp  gstreamer_custom_source.h  gstreamer_file_source.cpp  gstreamer_file_source.h  gstreamer_h264_encoder.cpp  gstreamer_h264_encoder.h  gstreamer_h264_player.cpp  gstreamer_h264_player.h  gstreamer_raw_data_source.cpp  gstreamer_raw_data_source.h  gstreamer_rtsp_launch.cpp  gstreamer_rtsp_launch.h  gstreamer_rtsp_server.cpp  gstreamer_rtsp_server.h  gstreamer_rtsp_source.cpp  gstreamer_rtsp_source.h  gstreamer_test_source.cpp  gstreamer_test_source.h
Modules/video/shared_memory_video/: CMakeLists.txt  shared_memory_video_publisher.cpp  shared_memory_video_publisher.h  shared_memory_video_subscriber.cpp  shared_memory_video_subscriber.h
Modules/video/shm_common/: shared_memory_streaming.hpp
Modules/video/video_messages/: CMakeLists.txt  frame_message.cpp  frame_message.h
Modules/websocket/: CMakeLists.txt
Modules/websocket/websocket_client/: CMakeLists.txt  websocket_client_impl.cpp  websocket_client_impl.h  websocket_utility.hpp
Plugins/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/ApplicationSample/: CMakeLists.txt
Samples/ApplicationSample/Application/: Application.cpp  CMakeLists.txt
Samples/ApplicationSample/Configuration/: ApplicationSample.xml
Samples/ApplicationSample/DE/: ApplicationSample.xml  ApplicationSampleDataSet.xml
Samples/ApplicationSample/ModernAPI/: Dispatchers.hpp
Samples/ApplicationSample/Modules/: CMakeLists.txt
Samples/BinaryParser/: CMakeLists.txt
Samples/BinaryParser/CLI/: CMakeLists.txt  mainapp.cpp
Samples/BinaryParser/SimpleParser/: CMakeLists.txt  SimpleParser.cpp
Samples/Communication/: CMakeLists.txt
Samples/Communication/ChannelDBSample/: CMakeLists.txt  ChannelDBSample.cpp  DEConfig.h  Tables.h
Samples/Communication/ChannelSample/: CMakeLists.txt  ChannelSample.cpp
Samples/Communication/TCPServerSample/: CMakeLists.txt
Samples/Controllers/: CMakeLists.txt
Samples/Controllers/DirectInputSample/: CMakeLists.txt  DirectInputSample.cpp  Tables.h
Samples/Controllers/JoystickSample/: CMakeLists.txt  JoystickSample.cpp  Tables.h
Samples/Database/: CMakeLists.txt
Samples/Database/DatabaseAdvancedFeatures/: CMakeLists.txt  DatabaseAdvancedFeatures.cpp
Samples/Database/DatabaseParserSample/: CMakeLists.txt  DatabaseParserSample.cpp
Samples/Database/DatabaseSample/: CMakeLists.txt  DatabaseSample.cpp
Samples/DynamicApplication/: CMakeLists.txt
Samples/ErrorsHandlerSample/: CMakeLists.txt
Samples/Files/: CMakeLists.txt
Samples/Logging/: CMakeLists.txt
Samples/Monitor/: CMakeLists.txt
Samples/RemoteAgentSample/: CMakeLists.txt
Samples/Rules/: CMakeLists.txt
Samples/Rules/DE/: DB.xml  (+3 more)
Samples/StateMachine/: CMakeLists.txt
Samples/VideoIPC/: CMakeLists.txt
(+323 files in other folders)
